--- a/src/Components/styles/pricingCards.css
+++ b/src/Components/styles/pricingCards.css
@@ -42,5 +42,6 @@
         justify-content: center;
         align-items: center;
         gap: 50px 10px;
+        overflow: hidden;
     }
 }
