--- a/src/Components/styles/section.css
+++ b/src/Components/styles/section.css
@@ -8,6 +8,7 @@
 }
 .section {
     position: relative;
+    overflow: hidden;
 }
 .section > div {
     position: absolute;
